--- a/Externals/cubeb/msvc/cubeb.vcxproj.filters
+++ b/Externals/cubeb/msvc/cubeb.vcxproj.filters
@@ -6,7 +6,6 @@
     <ClInclude Include="..\src\cubeb_assert.h" />
     <ClInclude Include="..\src\cubeb_log.h" />
     <ClInclude Include="..\src\cubeb_mixer.h" />
-    <ClInclude Include="..\src\cubeb_panner.h" />
     <ClInclude Include="..\src\cubeb_resampler.h" />
     <ClInclude Include="..\src\cubeb_resampler_internal.h" />
     <ClInclude Include="..\src\cubeb_ring_array.h" />
@@ -44,7 +43,6 @@
     <ClCompile Include="..\src\cubeb.c" />
     <ClCompile Include="..\src\cubeb_log.cpp" />
     <ClCompile Include="..\src\cubeb_mixer.cpp" />
-    <ClCompile Include="..\src\cubeb_panner.cpp" />
     <ClCompile Include="..\src\cubeb_resampler.cpp" />
     <ClCompile Include="..\src\cubeb_strings.c" />
     <ClCompile Include="..\src\cubeb_wasapi.cpp" />
@@ -52,6 +50,7 @@
     <ClCompile Include="..\src\speex\resample.c">
       <Filter>speex</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\cubeb_utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="speex">
