iOS: Add WIA and RVZ as supported files

--- a/Source/iOS/DolphiniOS/DolphiniOS/Info.plist
+++ b/Source/iOS/DolphiniOS/DolphiniOS/Info.plist
@@ -112,6 +112,8 @@
 				<key>public.filename-extension</key>
 				<array>
 					<string>iso</string>
+					<string>wia</string>
+					<string>rvz</string>
 					<string>dol</string>
 					<string>elf</string>
 				</array>
