--- a/Data/Sys/GameSettings/RMC.ini
+++ b/Data/Sys/GameSettings/RMC.ini
@@ -14,6 +14,7 @@
 [Video_Hacks]
 EFBEmulateFormatChanges = True
 DeferEFBCopies = False
+ForceLogicOpsFallback = True
 
 [Video_Stereoscopy]
 StereoConvergence = 613
