rest of the fucking owl

--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -463,6 +463,24 @@ add_library(core
   PowerPC/Interpreter/Interpreter_Paired.cpp
   PowerPC/Interpreter/Interpreter_SystemRegisters.cpp
   PowerPC/Interpreter/Interpreter_Tables.cpp
+	Slippi/SlippiGameFileLoader.cpp
+	Slippi/SlippiGameFileLoader.h
+	Slippi/SlippiMatchmaking.cpp
+	Slippi/SlippiMatchmaking.h
+	Slippi/SlippiNetplay.cpp
+	Slippi/SlippiNetplay.h
+	Slippi/SlippiPad.cpp
+	Slippi/SlippiPad.h
+	Slippi/SlippiPlayback.cpp
+	Slippi/SlippiPlayback.h
+	Slippi/SlippiReplayComm.cpp
+	Slippi/SlippiReplayComm.h
+	Slippi/SlippiSavestate.cpp
+	Slippi/SlippiSavestate.h
+	Slippi/SlippiTimer.cpp
+	Slippi/SlippiTimer.h
+	Slippi/SlippiUser.cpp
+	Slippi/SlippiUser.h
 )
 
 if(_M_X86)
@@ -542,6 +560,10 @@ elseif(_M_ARM_64)
   )
 endif()
 
+target_include_directories(core PUBLIC
+	${CMAKE_CURRENT_SOURCE_DIR}/../Core
+	${CMAKE_CURRENT_SOURCE_DIR}/../Common
+)
 target_link_libraries(core
 PUBLIC
   audiocommon
