--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -545,8 +545,9 @@ else()
 endif()
 add_subdirectory(Externals/glslang)
 add_subdirectory(Externals/imgui)
-add_subdirectory(Externals/Slippi)
-include_directories(Externals/Slippi)
+add_subdirectory(Externals/SlippiLib)
+include_directories(Externals/SlippiLib)
+include_directories(Externals/nlohmann)
 add_subdirectory(Externals/semver)
 include_directories(Externals/semver/include)
 add_subdirectory(Externals/open-vcdiff)
