Compiling. Online and rollback work. Replays broken currently

--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -582,10 +582,12 @@ PUBLIC
   videoogl
   videosoftware
   videovulkan
+	semver
   SlippiLib
   vcdcom
   vcddec
   vcdenc
+	z
 
 PRIVATE
   fmt::fmt
