GameINI: Disable load/store floating point on some Sonic games

--- a/Data/Sys/GameSettings/RSV.ini
+++ b/Data/Sys/GameSettings/RSV.ini
@@ -1,4 +1,4 @@
-# SNCE8P, SNCJ8P, SNCP8P - SONIC COLOURS
+# RSVE8P, RSVJ8P, RSVP8P - Sonic Unleashed
 
 [Core]
 # Values set here will override the main Dolphin settings.
@@ -11,9 +11,6 @@
 
 [ActionReplay]
 # Add action replay cheats here.
-
-[Video_Hacks]
-EFBAccessEnable = False
 
 [Dolphin.Debug]
 JitLoadStoreFloatingOff = True
