iOS: Add touchscreen controller configuration updater

--- a/Source/iOS/DolphiniOS/DolphiniOS/DefaultPreferences.plist
+++ b/Source/iOS/DolphiniOS/DolphiniOS/DefaultPreferences.plist
@@ -41,5 +41,7 @@
 	<false/>
 	<key>seen_njb_notice</key>
 	<false/>
+	<key>tscontroller_config_version</key>
+	<integer>0</integer>
 </dict>
 </plist>
