pick 874a434 from ishii

--- a/Data/Sys/GameSettings/GALJ01r2.ini
+++ b/Data/Sys/GameSettings/GALJ01r2.ini
@@ -1,4 +1,4 @@
-# GALE01 - Super Smash Bros. Melee NTSC-U 1.02
+# GALJ01 - Super Smash Bros. Melee NTSC-J 1.02
 
 [Gecko_Enabled]
 $Required: General Codes
