Fix some Android compilation errors
There is a linking error with SliderCalcRatioFromValueT in
OnScreenDisplay.cpp left that I didn't manage to fix.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -513,7 +513,7 @@ endif()
 
 if(SLIPPI_PLAYBACK)
   # Slippi Playback build option
-  add_compile_definitions(IS_PLAYBACK)
+  add_definitions(-DIS_PLAYBACK=1)
 endif()
 
 ########################################
