Update playback flag

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -321,7 +321,7 @@ jobs:
           mkdir build
           cd build
           export LIBRARY_PATH=/usr/lib/
-          cmake -DQt5_DIR=$(brew --prefix qt)/lib/cmake/Qt5 -DENABLE_NOGUI=false ..
+          cmake -DSLIPPI_PLAYBACK=false -DQt5_DIR=$(brew --prefix qt)/lib/cmake/Qt5 -DENABLE_NOGUI=false ..
           make -j7
       - name: "Package Netplay"
         if: success()
@@ -387,7 +387,7 @@ jobs:
           mkdir build
           export LD_LIBRARY_PATH=/usr/lib/
           cd build
-          cmake -DIS_PLAYBACK=true -DQt5_DIR=$(brew --prefix qt)/lib/cmake/Qt5 -DENABLE_NOGUI=false ..
+          cmake -DQt5_DIR=$(brew --prefix qt)/lib/cmake/Qt5 -DENABLE_NOGUI=false ..
           make -j7
       - name: "Package Playback"
         if: success()
