--- a/Source/Android/app/build.gradle
+++ b/Source/Android/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.1.0'
+    implementation "androidx.preference:preference:1.1.1"
 
     // Android TV UI libraries.
     implementation 'androidx.leanback:leanback:1.0.0'
