--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ matrix:
         apt:
           packages:
             - p7zip-full
-      install: "./.travis/appimage/deps.sh"
-      script: "./.travis/appimage/build.sh"
-      after_success: "./.travis/appimage/appimage.sh"
+      install: "./travis/appimage/deps.sh"
+      script: "./travis/appimage/build.sh"
+      after_success: "./travis/appimage/appimage.sh"
       cache: ccache
 deploy:
   provider: releases
