--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,12 @@ matrix:
       install: 
         - docker run -e ENABLE_COMPATIBILITY_REPORTING --env-file travis/common/travis-ci.env -v $(pwd):/dolphin-emu -v "$HOME/.ccache":/root/.ccache quriouspixel/yuzu:latest /bin/bash
       script: 
+        - $(pwd)
         - cd $HOME
-        - ls -al $HOME
-        - ls -al /dolphin-emu
-        - mkdir build && cd build
-        - cmake /dolphin-emu -DLINUX_LOCAL_DEV=true
+        - ls -al $HOME/build
+        - ls -al /
+        - mkdir Build && cd Build
+        - cmake .. -DLINUX_LOCAL_DEV=true
         - make
         - ln -s ../../Data/Sys Binaries/
       after_success: "./travis/appimage/appimage.sh"
