--- a/.travis.yml
+++ b/.travis.yml
@@ -17,12 +17,13 @@ matrix:
             - libc6-dev
             - libavformat-dev
             - libavdevice-dev
+            - libfmt-dev
       before_install: 
         - docker pull quriouspixel/yuzu:latest 
         - docker run -e ENABLE_COMPATIBILITY_REPORTING --env-file travis/common/travis-ci.env -v $(pwd):/dolphin -v "$HOME/.ccache":/root/.ccache quriouspixel/yuzu:latest /bin/bash
       script: 
         - mkdir Build && cd Build
-        - cmake .. -DLINUX_LOCAL_DEV=true
+        - cmake .. -DLINUX_LOCAL_DEV=true -DQt5_DIR=$PWD/Externals/Qt
         - make
         - ln -s ../../Data/Sys Binaries/
       after_success: "./travis/appimage/appimage.sh"
