--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,8 @@ matrix:
         - docker run -e ENABLE_COMPATIBILITY_REPORTING --env-file travis/common/travis-ci.env -v $(pwd):/dolphin -v "$HOME/.ccache":/root/.ccache quriouspixel/yuzu:latest /bin/bash
       script: 
         - mkdir Build && cd Build
-        - cmake .. -DLINUX_LOCAL_DEV=true -DQt5_DIR=$PWD/Externals/Qt
+        - ls -al $HOME/Externals/Qt
+        - cmake .. -DLINUX_LOCAL_DEV=true -DQt5_DIR=$HOME/Externals/Qt
         - make
         - ln -s ../../Data/Sys Binaries/
       after_success: "./travis/appimage/appimage.sh"
