--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ matrix:
         - docker run -e ENABLE_COMPATIBILITY_REPORTING --env-file travis/common/travis-ci.env -v $(pwd):/dolphin -v "$HOME/.ccache":/root/.ccache quriouspixel/yuzu:latest /bin/bash
       script: 
         - mkdir Build && cd Build
-        - ls -al /home/travis/build/qurious-pixel/dolphin/Externals/Qt
-        - cmake .. -DLINUX_LOCAL_DEV=true -DQt5_DIR=/home/travis/build/qurious-pixel/dolphin/Externals/Qt
+        - ls -al /home/travis/build/qurious-pixel/dolphin/Externals/Qt/Qt5.14.1
+        - cmake .. -DLINUX_LOCAL_DEV=true -DQt5_DIR=/home/travis/build/qurious-pixel/dolphin/Externals/Qt/Qt5.14.1        
         - make
         - ln -s ../../Data/Sys Binaries/
       after_success: "./travis/appimage/appimage.sh"
