--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,24 @@ matrix:
         apt:
           packages:
             - p7zip-full
+            - libxi-dev
+            - libavcodec-dev
+            - libudev-dev
+            - libevdev-dev
+            - libc6-dev
+            - libavformat-dev
+            - libavdevice-dev
+            - libfmt-dev
+            - qtbase5-dev
+            - qttools5-dev
+            - qtbase5-private-dev
+            - qtdeclarative5-dev      
       before_install: 
         - docker pull quriouspixel/yuzu:latest 
         - docker run -e ENABLE_COMPATIBILITY_REPORTING --env-file travis/common/travis-ci.env -v $(pwd):/dolphin -v "$HOME/.ccache":/root/.ccache quriouspixel/yuzu:latest /bin/bash
       script: 
         - mkdir Build && cd Build
-        - ls -al /opt
-        - cmake .. -DLINUX_LOCAL_DEV=true -DQt5_DIR=/home/travis/build/qurious-pixel/dolphin/Externals/Qt/Qt5.14.1        
+        - cmake .. -DLINUX_LOCAL_DEV=true        
         - make
         - ln -s ../../Data/Sys Binaries/
       after_success: "./travis/appimage/appimage.sh"
