--- a/.travis.yml
+++ b/.travis.yml
@@ -9,28 +9,12 @@ matrix:
       addons:
         apt:
           packages:
-            - p7zip-full
-            - libxi-dev
-            - libavcodec-dev
-            - libudev-dev
-            - libevdev-dev
-            - libc6-dev
-            - libavformat-dev
-            - libavdevice-dev
-            - libfmt-dev
-            - qtbase5-dev
-            - qttools5-dev
-            - qtbase5-private-dev
-            - qtdeclarative5-dev      
-      before_install: 
-        - docker pull quriouspixel/yuzu:latest 
-        - docker run -e ENABLE_COMPATIBILITY_REPORTING --env-file travis/common/travis-ci.env -v $(pwd):/dolphin -v "$HOME/.ccache":/root/.ccache quriouspixel/yuzu:latest /bin/bash
+            - p7zip-full 
+            - curl
       script: 
-        - mkdir Build && cd Build
-        - cmake .. -DLINUX_LOCAL_DEV=true        
-        - make
-        - ln -s ../../Data/Sys Binaries/
-      after_success: "./travis/appimage/appimage.sh"
+            - curl -sLO "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage"
+      after_success: 
+            - mv linuxdeployqt-continuous-x86_64.AppImage /Artifacts
       cache: ccache
 deploy:
   provider: releases
