--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,28 @@ matrix:
           packages:
             - p7zip-full 
             - curl
+            - libxi-dev
+            - libavcodec-dev
+            - libudev-dev
+            - libevdev-dev
+            - libc6-dev
+            - libavformat-dev
+            - libavdevice-dev
+            - libfmt-dev
+            - qtbase5-dev
+            - qttools5-dev
+            - qtbase5-private-dev
+            - qtdeclarative5-dev
+	          - liblzma-dev
+	          - x11-utils
       script: 
-            - curl -sLO "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage"
+            - mkdir Build && cd Build
+            - cmake .. -DLINUX_LOCAL_DEV=true        
+            - make
+            - ln -s ../../Data/Sys Binaries/
       after_success: 
             - mkdir ~/Artifacts
             - mv linuxdeployqt-continuous-x86_64.AppImage ~/Artifacts
-      cache: ccache
 deploy:
   provider: releases
   api_key:
