--- a/Data/Sys/GameSettings/GALE01r2.ini
+++ b/Data/Sys/GameSettings/GALE01r2.ini
@@ -11,7 +11,7 @@ FastDiscSpeed = True
 $Required: General Codes
 $Required: Slippi Recording
 $Required: Slippi Online
-$Recommended: Normal Lag Reduction
+#$Recommended: Normal Lag Reduction
 $Recommended: Polling drift fix + VB
 
 [Gecko]
